# atomspace

./: CMakeLists.txt  TODO  insane-O2-bad-insane-O2.ii  insane-O2-bad-insane-O2.s  insane-O2.cc  insane-gcc.version  insane-more-O2-bad-insane-more-O2.ii  insane-more-O2-bad-insane-more-O2.s  insane-more-O2.cc
cmake/: OpenCogGuile.cmake
examples/atomspace/: fold.scm
examples/foreign/: README.md  json-query.scm
examples/pattern-matcher/: dot-top.scm  infinite.scm
junk/: Makefile  README.md  hello.cl  main.cc
lib/: AtomSpaceConfig.cmake.in
opencog/: CMakeLists.txt
opencog/alloc/: Alloc.h  CMakeLists.txt
opencog/atoms/: CMakeLists.txt
opencog/atomspace/: AtomSpace.cc  AtomSpace.h  AtomTable.cc  AtomTable.h  IncomeIndex.h  StringIndex.h  TypeIndex.cc  TypeIndex.h  atom_types.script
opencog/atomutils/: CMakeLists.txt  TypeUtils.cc
opencog/benchmark/: CMakeLists.txt
opencog/cython/: PythonEval.cc  PythonEval.h
opencog/eval/: GenericEval.h
opencog/guile/: CMakeLists.txt  SchemeEval.cc  SchemeEval.h  SchemePrimitive.cc  SchemeSmob.h  SchemeSmobAS.cc  SchemeSmobGC.cc  SchemeSmobNew.cc  SchemeSmobTV.cc  SchemeSmobValue.cc  SexprEval.cc  SexprEval.h
opencog/query/: CMakeLists.txt  ContinuationMixin.cc  ContinuationMixin.h  DefaultImplicator.h  DefaultPatternMatchCB.cc  DefaultPatternMatchCB.h  Implicator.cc  Implicator.h  InitiateSearchCB.cc  InitiateSearchCB.h  InitiateSearchMixin.cc  InitiateSearchMixin.h  NextSearchMixin.cc  Pattern.h  PatternLinkRuntime.cc  PatternMatchCallback.h  PatternMatchEngine.cc  PatternMatchEngine.h  PatternSCM.cc  Recognizer.cc  Recognizer.h  Satisfier.cc  Satisfier.h  SatisfyMixin.cc  TermMatchMixin.cc  TermMatchMixin.h  TraverseMixin.cc  TraverseMixin.h
opencog/rule-engine/: CMakeLists.txt
tests/atoms/: CMakeLists.txt  StateLinkUTest.cxxtest
tests/atoms/container/: gpn-container.scm
tests/atoms/flow/: dynamic.scm  filter-glob-test.scm
tests/atoms/foreign/: sexpr-query-test.scm
tests/atoms/reduct/: bool-library-test.scm  math-library-test.scm
tests/atoms/value/: CMakeLists.txt  MonoValueUTest.cxxtest
(+204 files in other folders)
