LINK_LIBRARIES(atomspace clearbox execution)

IF(HAVE_GUILE)
	ADD_CXXTEST(FreeLinkUTest)
	TARGET_LINK_LIBRARIES(FreeLinkUTest smob)
	ADD_CXXTEST(RandomUTest)
	TARGET_LINK_LIBRARIES(RandomUTest smob)
	ADD_CXXTEST(ReductUTest)
	TARGET_LINK_LIBRARIES(ReductUTest smob)
ENDIF(HAVE_GUILE)

ADD_CXXTEST(DefineLinkUTest)
ADD_CXXTEST(DeleteLinkUTest)
ADD_CXXTEST(PutLinkUTest)
ADD_CXXTEST(StateLinkUTest)
